# ChangeLog for app-text/xpdf
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.167 2008/03/09 23:23:27 ricmm Exp $

  09 Mar 2008; <ricmm@gentoo.org> xpdf-3.01-r8.ebuild:
  Drop to ~mips due to unstable deps

  21 Nov 2007; Stefan Schweizer <genstef@gentoo.org> -xpdf-3.02.ebuild,
  xpdf-3.02-r1.ebuild:
  remove broken version and bring keywords into new revision

*xpdf-3.02-r1 (21 Nov 2007)

  21 Nov 2007; Stefan Schweizer <genstef@gentoo.org> +xpdf-3.02-r1.ebuild:
  Fix crashes, bug 199827 thanks to Thomas Kreuzer
  <thomas.kreuzer@rwth-aachen.de>

  18 Nov 2007; Raúl Porcel <armin76@gentoo.org> xpdf-3.02.ebuild:
  alpha/ia64 stable wrt security #196735

  18 Nov 2007; Samuli Suominen <drac@gentoo.org> xpdf-3.02.ebuild:
  amd64 stable wrt #196735 and duplicate #176081.

  18 Nov 2007; Jeroen Roovers <jer@gentoo.org> xpdf-3.02.ebuild:
  Stable for HPPA (bug #196735).

  18 Nov 2007; Markus Rothe <corsair@gentoo.org> xpdf-3.02.ebuild:
  Stable on ppc64; bug #176081

  18 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org> xpdf-3.02.ebuild:
  ppc stable, bug #196735

  18 Nov 2007; Ferris McCormick <fmccor@gentoo.org> xpdf-3.02.ebuild:
  Sparc stable --- Security Bug #196735 --- works as always.

  18 Nov 2007; Dawid Węgliński <cla@gentoo.org> xpdf-3.02.ebuild:
  Stable on x86 (bug #176081)

*xpdf-3.02 (18 Nov 2007)

  18 Nov 2007; Stefan Schweizer <genstef@gentoo.org>
  +files/xpdf-3.02-poppler-nodrm.patch, +xpdf-3.02.ebuild:
  Version bump, many thanks go to Thomas Kreuzer
  <thomas.kreuzer@rwth-aachen.de> in bug 176081

  18 Aug 2007; Joe Peterson <lavajoe@gentoo.org> xpdf-3.01-r8.ebuild:
  Add ~x86-fbsd keyword (bug #189260)

  24 Jun 2007; Stefan Schweizer <genstef@gentoo.org>
  +files/poppler-0.5.9.patch, xpdf-3.01-r8.ebuild:
  Add poppler >=0.5.9 compatibility patch thanks to Ed Catmur
  <ed@catmur.co.uk> in bug 183008
