@@ -1,6 +1,10 @@
 # ChangeLog for app-text/xpdf
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.167 2008/03/09 23:23:27 ricmm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.168 2008/06/27 10:04:08 ulm Exp $
+
+  27 Jun 2008; Ulrich Mueller <ulm@gentoo.org> xpdf-3.01-r8.ebuild,
+  xpdf-3.02-r1.ebuild:
+  Change dependency from virtual/motif to x11-libs/openmotif, bug 224749.
 
   09 Mar 2008; <ricmm@gentoo.org> xpdf-3.01-r8.ebuild:
   Drop to ~mips due to unstable deps
